--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.4.3",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
