--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.2.1",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.15",
+    "@types/jwt-simple": "^0.5.33",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
@@ -41,6 +42,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "jwt-simple": "^0.5.6",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
