--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
     "@svgr/webpack": "4.1.0",
+    "@types/debounce": "^1.2.0",
     "@types/jest": "24.0.15",
     "@types/jwt-simple": "^0.5.33",
     "@types/node": "12.6.8",
@@ -23,6 +24,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "debounce": "^1.2.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.16.0",
