--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/debounce": "^1.2.0",
     "@types/jest": "24.0.15",
     "@types/jwt-simple": "^0.5.33",
+    "@types/moment": "^2.13.0",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
@@ -46,6 +47,7 @@
     "jest-watch-typeahead": "0.3.0",
     "jwt-simple": "^0.5.6",
     "mini-css-extract-plugin": "0.5.0",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
