--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/moment": "^2.13.0",
 		"@types/node": "12.6.8",
 		"@types/react": "16.8.23",
+		"@types/react-chartjs-2": "^2.5.7",
 		"@types/react-dom": "16.8.5",
 		"@types/react-redux": "^7.1.1",
 		"@types/react-router-dom": "^4.3.4",
@@ -26,6 +27,7 @@
 		"babel-preset-react-app": "^9.0.0",
 		"camelcase": "^5.2.0",
 		"case-sensitive-paths-webpack-plugin": "2.2.0",
+		"chart.js": "^2.8.0",
 		"css-loader": "2.1.1",
 		"debounce": "^1.2.0",
 		"dotenv": "6.2.0",
@@ -60,6 +62,7 @@
 		"postcss-safe-parser": "4.0.1",
 		"react": "^16.8.6",
 		"react-app-polyfill": "^1.0.1",
+		"react-chartjs-2": "^2.7.6",
 		"react-dev-utils": "^9.0.1",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.1.0",
@@ -87,12 +90,25 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"jest": {
-		"collectCoverageFrom": [ "src/**/*.{js,jsx,ts,tsx}", "!src/**/*.d.ts" ],
-		"setupFiles": [ "react-app-polyfill/jsdom" ],
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,ts,tsx}",
+			"!src/**/*.d.ts"
+		],
+		"setupFiles": [
+			"react-app-polyfill/jsdom"
+		],
 		"setupFilesAfterEnv": [],
 		"testMatch": [
 			"<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
@@ -104,16 +120,35 @@
 			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
 			"^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
 		},
-		"transformIgnorePatterns": [ "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$", "^.+\\.module\\.(css|sass|scss)$" ],
+		"transformIgnorePatterns": [
+			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+			"^.+\\.module\\.(css|sass|scss)$"
+		],
 		"modulePaths": [],
 		"moduleNameMapper": {
 			"^react-native$": "react-native-web",
 			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
 		},
-		"moduleFileExtensions": [ "web.js", "js", "web.ts", "ts", "web.tsx", "tsx", "json", "web.jsx", "jsx", "node" ],
-		"watchPlugins": [ "jest-watch-typeahead/filename", "jest-watch-typeahead/testname" ]
+		"moduleFileExtensions": [
+			"web.js",
+			"js",
+			"web.ts",
+			"ts",
+			"web.tsx",
+			"tsx",
+			"json",
+			"web.jsx",
+			"jsx",
+			"node"
+		],
+		"watchPlugins": [
+			"jest-watch-typeahead/filename",
+			"jest-watch-typeahead/testname"
+		]
 	},
 	"babel": {
-		"presets": [ "react-app" ]
+		"presets": [
+			"react-app"
+		]
 	}
 }
