--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"private": true,
 	"dependencies": {
 		"@babel/core": "7.4.3",
+		"@date-io/moment": "^1.3.8",
 		"@material-ui/core": "^4.2.1",
+		"@material-ui/pickers": "^3.2.0",
 		"@material-ui/styles": "^4.2.1",
 		"@svgr/webpack": "4.1.0",
 		"@types/debounce": "^1.2.0",
