--- a/package.json
+++ b/package.json
@@ -3,12 +3,94 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@babel/core": "7.4.3",
 		"@date-io/moment": "^1.3.8",
 		"@material-ui/core": "^4.2.1",
 		"@material-ui/icons": "^4.2.1",
 		"@material-ui/pickers": "^3.2.0",
 		"@material-ui/styles": "^4.2.1",
+		"jwt-simple": "^0.5.6",
+		"moment": "^2.24.0",
+		"react": "^16.8.6",
+		"react-app-polyfill": "^1.0.1",
+		"react-dev-utils": "^9.0.1",
+		"react-dom": "^16.8.6",
+		"react-redux": "^7.1.0",
+		"react-router-dom": "^5.0.1",
+		"redux": "^4.0.4"
+	},
+	"scripts": {
+		"start": "node scripts/start.js",
+		"build": "node scripts/build.js",
+		"test": "node scripts/test.js"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,ts,tsx}",
+			"!src/**/*.d.ts"
+		],
+		"setupFiles": [
+			"react-app-polyfill/jsdom"
+		],
+		"setupFilesAfterEnv": [],
+		"testMatch": [
+			"<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+			"<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+		],
+		"testEnvironment": "jest-environment-jsdom-fourteen",
+		"transform": {
+			"^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+			"^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+		},
+		"transformIgnorePatterns": [
+			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+			"^.+\\.module\\.(css|sass|scss)$"
+		],
+		"modulePaths": [],
+		"moduleNameMapper": {
+			"^react-native$": "react-native-web",
+			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+		},
+		"moduleFileExtensions": [
+			"web.js",
+			"js",
+			"web.ts",
+			"ts",
+			"web.tsx",
+			"tsx",
+			"json",
+			"web.jsx",
+			"jsx",
+			"node"
+		],
+		"watchPlugins": [
+			"jest-watch-typeahead/filename",
+			"jest-watch-typeahead/testname"
+		]
+	},
+	"babel": {
+		"presets": [
+			"react-app"
+		]
+	},
+	"devDependencies": {
+		"@types/react-redux": "^7.1.1",
+		"@babel/core": "7.4.3",
 		"@svgr/webpack": "4.1.0",
 		"@types/debounce": "^1.2.0",
 		"@types/jest": "24.0.15",
@@ -17,7 +99,6 @@
 		"@types/node": "12.6.8",
 		"@types/react": "16.8.23",
 		"@types/react-dom": "16.8.5",
-		"@types/react-redux": "^7.1.1",
 		"@types/react-router-dom": "^4.3.4",
 		"@types/redux": "^3.6.0",
 		"@typescript-eslint/eslint-plugin": "1.6.0",
@@ -29,9 +110,7 @@
 		"babel-preset-react-app": "^9.0.0",
 		"camelcase": "^5.2.0",
 		"case-sensitive-paths-webpack-plugin": "2.2.0",
-		"chart.js": "^2.8.0",
 		"css-loader": "2.1.1",
-		"debounce": "^1.2.0",
 		"dotenv": "6.2.0",
 		"dotenv-expand": "4.2.0",
 		"eslint": "^5.16.0",
@@ -51,10 +130,7 @@
 		"jest-environment-jsdom-fourteen": "0.1.0",
 		"jest-resolve": "24.7.1",
 		"jest-watch-typeahead": "0.3.0",
-		"jwt-simple": "^0.5.6",
-		"material-ui-flat-pagination": "^3.2.0",
 		"mini-css-extract-plugin": "0.5.0",
-		"moment": "^2.24.0",
 		"optimize-css-assets-webpack-plugin": "5.0.1",
 		"pnp-webpack-plugin": "1.2.1",
 		"postcss-flexbugs-fixes": "4.1.0",
@@ -62,13 +138,6 @@
 		"postcss-normalize": "7.0.1",
 		"postcss-preset-env": "6.6.0",
 		"postcss-safe-parser": "4.0.1",
-		"react": "^16.8.6",
-		"react-app-polyfill": "^1.0.1",
-		"react-dev-utils": "^9.0.1",
-		"react-dom": "^16.8.6",
-		"react-redux": "^7.1.0",
-		"react-router-dom": "^5.0.1",
-		"redux": "^4.0.4",
 		"resolve": "1.10.0",
 		"sass-loader": "7.1.0",
 		"semver": "6.0.0",
@@ -81,43 +150,5 @@
 		"webpack-dev-server": "3.2.1",
 		"webpack-manifest-plugin": "2.0.4",
 		"workbox-webpack-plugin": "4.2.0"
-	},
-	"scripts": {
-		"start": "node scripts/start.js",
-		"build": "node scripts/build.js",
-		"test": "node scripts/test.js"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
-	},
-	"jest": {
-		"collectCoverageFrom": [ "src/**/*.{js,jsx,ts,tsx}", "!src/**/*.d.ts" ],
-		"setupFiles": [ "react-app-polyfill/jsdom" ],
-		"setupFilesAfterEnv": [],
-		"testMatch": [
-			"<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-			"<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-		],
-		"testEnvironment": "jest-environment-jsdom-fourteen",
-		"transform": {
-			"^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-			"^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-		},
-		"transformIgnorePatterns": [ "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$", "^.+\\.module\\.(css|sass|scss)$" ],
-		"modulePaths": [],
-		"moduleNameMapper": {
-			"^react-native$": "react-native-web",
-			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-		},
-		"moduleFileExtensions": [ "web.js", "js", "web.ts", "ts", "web.tsx", "tsx", "json", "web.jsx", "jsx", "node" ],
-		"watchPlugins": [ "jest-watch-typeahead/filename", "jest-watch-typeahead/testname" ]
-	},
-	"babel": {
-		"presets": [ "react-app" ]
 	}
 }
